--- a/hotel-booking-system-ui/WebContent/resources/view/booking.html
+++ b/hotel-booking-system-ui/WebContent/resources/view/booking.html
@@ -1,16 +1,11 @@
 <div>
 	<div>
-		Choose your destination <select ng-change="getHotelByCity()"
+		Choose your destination <select ng-change="getHotelsByCity()"
 			ng-options="city as city.name for city in cities track by city.cityId"
 			ng-model="selectedCity"></select>
-		<div>
-			Choose your destination <select ng-change="getHotels"
-				ng-options="city as city.name for city in cities track by city.cityId"
-				ng-model="selectedCity"></select>
-		</div>
 		<div ng-show='hotels'>
 			Hotel available in the city <select ng-change="getRoomsByHotel()"
-				ng-options="hotel as hotel.name for hotel in hotels track by hote.hotelId"
+				ng-options="hotel as hotel.name for hotel in hotels track by hotel.hotelId"
 				ng-model="selectedHotel"></select>
 		</div>
 		<div ng-show='rooms'>
@@ -31,5 +26,6 @@
 			<input type="submit" ng-click="submitBookingForm()">
 		</div>
 		<div ng-show='submitSuccessMessage'>Booking is confirmed
-			{{submitSuccessMessage}}</div>
+			{{bookingId}}</div>
 	</div>
+</div>
