--- a/hotel-booking-system-ui/WebContent/resources/view/booking.html
+++ b/hotel-booking-system-ui/WebContent/resources/view/booking.html
@@ -1,31 +1,72 @@
 <div>
-	<div>
-		Choose your destination <select ng-change="getHotelsByCity()"
-			ng-options="city as city.name for city in cities track by city.cityId"
-			ng-model="selectedCity"></select>
-		<div ng-show='hotels'>
-			Hotel available in the city <select ng-change="getRoomsByHotel()"
-				ng-options="hotel as hotel.name for hotel in hotels track by hotel.hotelId"
-				ng-model="selectedHotel"></select>
+	<div class='col-lg-2'></div>
+	<div class="panel panel-info">
+		<div class="panel-heading">
+			<h3 class="panel-title">Book a hotel</h3>
 		</div>
-		<div ng-show='rooms'>
-			Select a room <select
-				ng-options="room as room.roomId for room in rooms track by room.roomId"
-				ng-model="selectedRoom"></select>
+		<div class="panel-body">
+			<div>
+
+
+				<form class='col-lg-12'>
+					<div class="form-group well-lg">
+						<label class='col-lg-4'>Choose your destination</label> <select
+							class='col-lg-2' ng-change="getHotelsByCity()"
+							class="form-control"
+							ng-options="city as city.name for city in cities track by city.cityId"
+							ng-model="selectedCity"></select><span class='col-lg-6'></span>
+					</div>
+
+					<div class="form-group well-lg">
+						<label class='col-lg-4' for="selectedHotel">Hotel
+							available in the city </label><select class='col-lg-2'
+							ng-change="getRoomsByHotel()"
+							ng-options="hotel as hotel.name for hotel in hotels track by hotel.hotelId"
+							ng-model="selectedHotel"></select>
+					</div>
+
+					<div class="form-group well-lg">
+						<label class='col-lg-4' for="selectedRoom">Select a room</label> <select
+							class='col-lg-2'
+							ng-options="room as room.roomId for room in rooms track by room.roomId"
+							ng-model="selectedRoom"></select>
+					</div>
+
+
+					<div class="form-group well-lg">
+						<label class='col-lg-4' for="checkInDate">Check-in date</label><input
+							type="date" class='col-lg-2' name="checkInDate"
+							ng-model="checkInDate">
+					</div>
+					<div class="form-group well-lg">
+						<label class='col-lg-4' for="checkOutDate">Check-out date</label><input
+							type="date" class='col-lg-2' name="checkOutDate"
+							ng-model="checkOutDate" ng-change='validateCheckOutDate()'><span
+							ng-show='errorMessage'>{{errorMessage}}</span>
+					</div>
+
+					<div class='col-lg-12'>
+						<button class='col-lg-offset-1 col-lg-2' type="submit"
+							ng-click="cancelBooking()" class="btn btn-default">Cancel</button>
+						<button class='col-lg-offset-1 col-lg-2' type="submit"
+							ng-click="submitBookingForm()" class="btn btn-default">Submit</button>
+						<div ng-show='submitSuccessMessage'>Booking is confirmed
+							{{bookingId}}</div>
+					</div>
+				</form>
+
+
+				<form novalidate>
+					<!-- <div >
+						Choose your destination <select ng-change="getHotelsByCity()"
+							ng-options="city as city.name for city in cities track by city.cityId"
+							ng-model="selectedCity"></select>
+					</div> -->
+
+
+				</form>
+			</div>
 		</div>
-		<div>
-			Check-in date<input type="date" name="checkInDate"
-				ng-model="checkInDate">
-		</div>
-		<div>
-			Check-out date<input type="date" name="checkOutDate"
-				ng-model="checkOutDate" ng-change='validateCheckOutDate()'><span
-				ng-show='errorMessage'>{{errorMessage}}</span>
-		</div>
-		<div>
-			<input type="submit" ng-click="submitBookingForm()">
-		</div>
-		<div ng-show='submitSuccessMessage'>Booking is confirmed
-			{{bookingId}}</div>
 	</div>
+
 </div>
