--- a/hotel-booking-system-ui/WebContent/resources/view/home.html
+++ b/hotel-booking-system-ui/WebContent/resources/view/home.html
@@ -2,6 +2,6 @@
 
 	<ul class="nav navbar-nav">
 		<li class="active"><a href="#booking">Book a Room</a></li>
-		<li><a href="#home">View Lowest Priced Hotels</a></li>
+		<li><a href="#best_prices">View Lowest Priced Hotels</a></li>
 	</ul>
 </div>
