--- a/hotel-booking-system-ui/WebContent/resources/view/booking.html
+++ b/hotel-booking-system-ui/WebContent/resources/view/booking.html
@@ -6,8 +6,6 @@
 		</div>
 		<div class="panel-body">
 			<div>
-
-
 				<form class='col-lg-12'>
 					<div class="form-group well-lg">
 						<label class='col-lg-4'>Choose your destination</label> <select
@@ -28,21 +26,26 @@
 					<div class="form-group well-lg">
 						<label class='col-lg-4' for="noOfRooms">Number of rooms to
 							book</label> <input type="number" class='col-lg-2' name="noOfRooms"
-							ng-model="bookingDto.noOfRooms">
+							ng-model="bookingDto.noOfRooms" required>
 					</div>
 
 
 					<div class="form-group well-lg">
 						<label class='col-lg-4' for="checkInDate">Check-in date</label><input
 							type="date" class='col-lg-2' name="checkInDate"
-							ng-model="bookingDto.checkInDate">
+							ng-model="bookingDto.checkInDate" required>
 					</div>
 					<div class="form-group well-lg">
 						<label class='col-lg-4' for="checkOutDate">Check-out date</label><input
 							type="date" class='col-lg-2' name="checkOutDate"
 							ng-model="bookingDto.checkOutDate"
-							ng-change='validateCheckOutDate()'><span
-							ng-show='errorMessage'>{{errorMessage}}</span>
+							ng-change='validateCheckOutDate()' required>
+
+						<p
+							ng-show='hasInvalidCheckOutDate && !bookingDto.checkOutDate.$pristine'
+							class="help-block">Check out date should be greater than
+							Check in date</p>
+
 					</div>
 
 					<div class='col-lg-12'>
@@ -50,7 +53,15 @@
 							ng-click="cancelBooking()" class="btn btn-default">Cancel</button>
 						<button class='col-lg-offset-1 col-lg-2' type="submit"
 							ng-click="submitBookingForm()" class="btn btn-default">Submit</button>
-						<div ng-show='message'>{{message}}{{bookingId.data}}</div>
+
+						<div ng-show='message'>
+							{{message}} {{bookingDetails.bookingId}}. <span
+								ng-show='bookingDetails.bookingAmount'>{{amountMessage}}
+								{{bookingDetails.bookingAmount | currency : "Rs." }}</span>
+						</div>
+
+
+
 					</div>
 				</form>
 
